<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="favourites">Избранные треки</string>
    <string name="play_lists">Плейлисты</string>
    <string name="empty_library">Ваша медиатека пуста</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="practicumLink">https://practicum.yandex.ru/android-developer/</string>
    <string name="supportEmail">ipon1201@yandex.ru</string>
    <string name="supportEmailSubj">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="supportEmailText">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreementLink">https://yandex.ru/legal/practicum_offer/</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="no_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refreshBtn">Обновить</string>
    <string name="searchHistoryTitle">Вы искали</string>
    <string name="clearHistoryBtnText">Очистить историю</string>
    <string name="trackTime">Длительность</string>
    <string name="collectionName">Альбом</string>
    <string name="releaseYear">Год</string>
    <string name="primaryGenreName">Жанр</string>
    <string name="country">Страна</string>
    <string name="trackTimeMillisDefault">00:00</string>
    <string name="newPlayList">Новый плейлист</string>
    <string name="noPlayListAvailable">Вы не создали ни одного плейлиста</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>