<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/yp_blue"
    android:paddingHorizontal="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/title"
        android:textColor="@color/yp_white"
        android:paddingTop="14dp"
        android:paddingBottom="12dp"
        android:text="@string/app_name"/>

<Button
    android:id="@+id/search_button"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    android:gravity="center"
    android:layout_marginBottom="@dimen/button_margin"
    android:layout_marginTop="24dp"
    android:backgroundTint="@color/yp_white"
    android:text="@string/search"
    android:textColor="@color/yp_black"
    android:textAllCaps="false"
    android:textSize="@dimen/button_text_size"
    app:icon="@drawable/search"
    app:iconGravity="textStart"
    app:iconPadding="@dimen/icon_padding"
    app:iconTint="@color/yp_black"
    app:cornerRadius="@dimen/button_radius"/>

    <Button
        android:id="@+id/library_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginBottom="@dimen/button_margin"
        android:backgroundTint="@color/yp_white"
        android:text="@string/library"
        android:textColor="@color/yp_black"
        android:textAllCaps="false"
        app:icon="@drawable/library"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        android:textSize="@dimen/button_text_size"
        app:iconTint="@color/yp_black"
        app:cornerRadius="@dimen/button_radius"/>

    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/yp_white"
        android:text="@string/settings"
        android:textColor="@color/yp_black"
        android:textAllCaps="false"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        android:textSize="@dimen/button_text_size"
        app:iconTint="@color/yp_black"
        app:cornerRadius="@dimen/button_radius"/>
</LinearLayout>