<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/yp_black"
        android:paddingTop="14dp"
        android:paddingStart="@dimen/start_padding"
        android:paddingBottom="16dp"
        android:text="@string/settings"
        android:textSize="@dimen/title"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/start_padding"
        android:paddingEnd="@dimen/end_padding"
        android:layout_marginTop="45dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme"
            android:textColor="@color/yp_black"
            android:layout_gravity="start"
            android:textSize="@dimen/text_size"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:gravity="end" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/start_padding"
        android:paddingEnd="@dimen/end_padding"
        android:layout_marginTop="@dimen/settings_margin_top">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textColor="@color/yp_black"
            android:layout_gravity="start"
            android:textSize="@dimen/text_size"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            app:tint="@color/yp__text_gray"
            android:src="@drawable/share"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/start_padding"
        android:paddingEnd="@dimen/end_padding"
        android:layout_marginTop="@dimen/settings_margin_top">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support"
            android:textColor="@color/yp_black"
            android:layout_gravity="start"
            android:textSize="@dimen/text_size"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            app:tint="@color/yp__text_gray"
            android:src="@drawable/support" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/start_padding"
        android:paddingEnd="@dimen/end_padding"
        android:layout_marginTop="@dimen/settings_margin_top">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreement"
            android:textColor="@color/yp_black"
            android:layout_gravity="start"
            android:textSize="@dimen/text_size"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            app:tint="@color/yp__text_gray"
            android:src="@drawable/arrow_forward"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:layout_weight="1"
        android:gravity="bottom">
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/yp__light_gray"
            android:layout_marginBottom="7.5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="@color/yp_black"
                android:src="@drawable/search" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yp_black"
                android:textSize="@dimen/toolbar_text_size"
                android:text="@string/search" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="@color/yp_black"
                android:src="@drawable/library" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/yp_black"
                android:textSize="@dimen/toolbar_text_size"
                android:text="@string/library" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="@color/yp_blue"
                android:src="@drawable/settings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/toolbar_text_size"
                android:textColor="@color/yp_blue"
                android:text="@string/settings" />
        </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>